--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=8000
+DATABASE_URL=mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+1.9.1
+AUTH_SECRET=hfbvhr83bf24n834bfihnc8u3bfndwjmx30832u5bhwjk
